--- a/primer_ejemplo.ipynb
+++ b/primer_ejemplo.ipynb
@@ -6,6 +6,15 @@
    "source": [
     "<h2> Primer ejemplo de series de tiempo en python <h2>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Soy Sebastian"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +33,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
